--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">AbroadApp</string>
+    <string name="app_name">Abroad</string>
+    <string name="sign_up_button">회원가입하기</string>
 </resources>
