--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_test">TESTActivity</string>
+    <string name="title_activity_member_filtering">MemberFilteringActivity</string>
 
 
 </resources>
